--- a/client/src/app/settings/account/account.component.html
+++ b/client/src/app/settings/account/account.component.html
@@ -35,7 +35,7 @@
             <ion-button color="danger" (click)="disableMFA()" class="m-center btn"> {{ 'Disable MFA' | translate }}
             </ion-button>
             } @else {
-            <ion-button (click)="activateMFA()" class="m-center"> {{ 'Actvate MFA' | translate }} </ion-button>
+            <ion-button color="primary" (click)="activateMFA()" class="m-center btn"> {{ 'Actvate MFA' | translate }} </ion-button>
             }
         </div>
     </ion-toolbar>
