--- a/client/src/app/form/exercise-form/exercise-form.component.scss
+++ b/client/src/app/form/exercise-form/exercise-form.component.scss
@@ -74,7 +74,7 @@ ion-col {
         padding-bottom: 10px;
         margin-bottom: 2px;
 
-        ion-button:last-child {
+        ion-button:last-of-type {
             --padding-end: 0px
         }
 
