--- a/client/src/app/my-activity/my-activity.page.html
+++ b/client/src/app/my-activity/my-activity.page.html
@@ -227,7 +227,7 @@
         </ion-header>
         <ion-content class="ion-padding">
             <div id="details">
-                @if (theme.isDark()) {
+                @if (isDark) {
                 <img src="/assets/logo-light.png" />
                 } @else {
                 <img src="/assets/logo-dark.png" />
