--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ion-app>
+<ion-app class="ion-app-container">
     <ion-router-outlet></ion-router-outlet>
     @if (canShowInstallButton && showInstallButton) {
         <ion-button color="light" class="ion-padding-x ion-margin-top slide-in-button" (click)="triggerInstall()">
