Removed completedAt and completed from exercise + fixed unnecessary exercise update when toggling set is completed (dirty propagated from set to parent, causing autosave to register as change).

--- a/client/src/app/workout-wizard/workout-wizard.component.html
+++ b/client/src/app/workout-wizard/workout-wizard.component.html
@@ -47,7 +47,7 @@
         }
         <div class="sets-container">
             <app-exercise-form #exerciseForm [style.width]="'100%'" [exercise]="currentExercise()" [workoutMode]="true"
-                (onCompletedEvent)="startRest($event)" 
+                (onCompletedEvent)="startRest($event)" [workout]="workout"
                 (onSupersetCompletedEvent)="goToNextExerciseSuperSet($event)"
                 (onAllCompletedEvent)="goToNextExercise()">
             </app-exercise-form>
