--- a/client/src/app/workout/workout.component.html
+++ b/client/src/app/workout/workout.component.html
@@ -18,8 +18,7 @@
                     <ion-item lines="none" [formGroupName]="exIndex" class="ion-no-border">
                         <app-exercise-form [style.width]="'100%'" [exercise]="exercise"
                             [canMoveExerciseDown]="$index < exercisesArray.controls.length - 1"
-                            [canMoveExerciseUp]="$index > 0" 
-                            (moveExerciseDownEvent)="moveExerciseDown($index)"
+                            [canMoveExerciseUp]="$index > 0" (moveExerciseDownEvent)="moveExerciseDown($index)"
                             (moveExerciseUpEvent)="moveExerciseUp($index)"
                             (onRemoveExerciseEvent)="removeExercise(exIndex)">
                         </app-exercise-form>
