--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,10 +1,13 @@
 <ion-app class="ion-app-container">
     <ion-router-outlet></ion-router-outlet>
+    <ion-button color="light" class="ion-padding-x ion-margin-top slide-in-button" (click)="push()">
+        {{ 'Enable notif' | translate }} &nbsp;
+    </ion-button>
     @if (canShowInstallButton && showInstallButton) {
-        <ion-button color="light" class="ion-padding-x ion-margin-top slide-in-button" (click)="triggerInstall()">
-            {{ 'Install App' | translate }} &nbsp;
-            <ion-icon [src]="downloadIcon"></ion-icon>
-        </ion-button>
+    <ion-button color="light" class="ion-padding-x ion-margin-top slide-in-button" (click)="triggerInstall()">
+        {{ 'Install App' | translate }} &nbsp;
+        <ion-icon [src]="downloadIcon"></ion-icon>
+    </ion-button>
     }
 </ion-app>
 
