--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ion-app class="ion-app-container">
     <ion-router-outlet></ion-router-outlet>
     <ion-button color="light" class="ion-padding-x ion-margin-top slide-in-button" (click)="push()">
-        {{ 'Enable notif' | translate }} &nbsp;
+        {{ 'Enable token' | translate }} &nbsp;
     </ion-button>
     @if (canShowInstallButton && showInstallButton) {
     <ion-button color="light" class="ion-padding-x ion-margin-top slide-in-button" (click)="triggerInstall()">
