--- a/client/src/app/tabs/tabs.page.html
+++ b/client/src/app/tabs/tabs.page.html
@@ -11,8 +11,13 @@
         </ion-tab-button>
 
         <ion-tab-button tab="chats">
-            <ion-icon  [src]="bubblesIcon"></ion-icon>
+            @if (currentUserType == trainer) {
+            <ion-icon [src]="peopleIcon"></ion-icon>
+            <ion-label>{{'Clients' | translate}}</ion-label>
+            } @else {
+            <ion-icon [src]="bubblesIcon"></ion-icon>
             <ion-label>{{'Trainer' | translate}}</ion-label>
+            }
         </ion-tab-button>
 
         <ion-tab-button tab="settings" id="settings">
