feat moved skip timer to the middle && update next set values only if current set is higher than next set [ci release]

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -146,3 +146,8 @@ body.sign-in-screen {
     min-height: calc(100% + env(safe-area-inset-top));
     padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
+
+.skip-footer {
+    text-align: center;
+    margin-bottom: 5px;
+}
