--- a/client/src/app/shared/continue-footer/continue-footer.component.html
+++ b/client/src/app/shared/continue-footer/continue-footer.component.html
@@ -1,5 +1,5 @@
 @if (workout) {
-<ion-footer class="bg_transparent" class="ion-padding-x">
+<ion-footer class="bg_transparent" class="ion-padding-x skip-footer">
 
     <app-rest-badge #restBadge [initialTime]="lastCompletedSet?.completedAt" (onRestSkippedEvent)="onRestSkipped()"
         [duration]="lastCompletedSetExercise?.restDuration" (onTimerCompletedEvent)="timerCompleted()"></app-rest-badge>
